# gnucap-geda

./: .gitignore  AUTHORS  BUGS  INSTALL  Makefile.am  NEWS  README  TODO  configure.ac  gnucap-geda  gnucap-geda.in
examples/: Makefile.am  README  bogus.sch  rail.gc  rc.gc  rc.sch  res.gc  res_net.gc  short.gc  spice.gc  spice_foo.sp  testbench.gc  testbench.sch
examples/comparator/: README  comparator.sch  demo.gc
examples/freqdiv/: README  divider.sch  gafrc  transient.gc
examples/opamp/: mos.mod  opamp.sch  testbench.sch
examples/osc/: README  osc.sch  transient.gc
examples/trigger/: README  transient.gc  trigger.sch
include/: 74.v  Makefile.am  analog.v  asic.v  connector.v  diode.v  linear.v  spice.v  switcap.v  switch.v  transistor.v
src/: Makefile.am  c_hide.cc  c_include.cc  d_component.cc  d_gedasckt.cc  d_gedasckt.h  d_net.cc  d_net.h  d_place.cc  d_place.h  d_port.cc  d_rail.cc  f_is.cc  io_trace.h  lang_geda.cc  lang_geda.h  lang_gschem.cc  signon.cc  symbol.h
tests/: D_Latch.ref  D_Latch.sch  D_Latch.sym  Makefile.am  auto_dut.2.sch  auto_dut.3.sch  auto_dut.3a.sch  auto_dut.3b.sch  auto_top.1.gc  auto_top.1.ref  auto_top.1.sch  auto_top.1g.gc  auto_top.1g.ref  auto_top.1g.sch  auto_top.1ge.gc  auto_top.1ge.ref  auto_top.1ge.sch  auto_top.1s.gc  auto_top.1s.ref  auto_top.1s.sch  auto_top.2.gc  auto_top.2.ref  auto_top.2.sch  auto_top.3.gc  auto_top.3.ref  auto_top.3.sch  auto_top.3a.gc  auto_top.3a.ref  auto_top.3b.gc  auto_top.3b.ref  auto_top.3b.sch  auto_top.4.gc  auto_top.4.sch  bogus.ref  buf.1.gc  buf.1.ref  buf.1.sch  buf.2.gc  buf.2.ref  buf.2.sch  (+123 more)
